<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/movieFragment">

    <fragment
        android:id="@+id/movieFragment"
        android:name="robert.pakpahan.jetprofinal.ui.fragment.MovieFragment"
        android:label="MovieFragment" >
        <action
            android:id="@+id/action_movieFragment_to_tvShowFragment"
            app:destination="@id/tvShowFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_movieFragment_to_favoriteFragment"
            app:destination="@id/favoriteFragment"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/tvShowFragment"
        android:name="robert.pakpahan.jetprofinal.ui.fragment.TvShowFragment"
        android:label="fragment_tv_show"
        tools:layout="@layout/fragment_tv_show" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="robert.pakpahan.jetprofinal.ui.fragment.FavoriteFragment"
        android:label="fragment_favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>